--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         </title>
     </head>
 
-    <body>
+    <body style ="colour : greenwhite; background-colour :blu>
         <h1> <b> uday kanchanapally </b></h1>
         <br>
         <hr>
