--- a/document.html
+++ b/document.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <h1> " header h1 </h1> 
+    <body style = "border: 0ch; background-color: rgb(64, 64, 75);font-size: medium >
+        <h1 style :"background-colour: red"> " header h1 </h1> 
         <h2> "header h2 </h2>
         <h23> " header h23 </h23>
     </body>
