--- a/para.html
+++ b/para.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html> 
+    <body style="background-color:black;">
     <p1>
-        <h1>
-            enter p in h 
-        </h1>
+        <h1 style=" font-family:'Courier New', Courier, monospace 'Times New Roman', Times, serif; font-size:xx-large;background-color:aquamarine;text-align:center; color:brown">
+            enter p in h  
+        </h1> 
     </p1>
+    <p1>
+        <h1 style="  font-size:xx-large;background-color:rgb(31, 192, 139);text-align:end; color:rgb(75, 67, 67)">
+            enter p in h  
+        </h1> 
+    </p1>
+</body>
 </html>
