--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
         </title>
     </head>
 
-    <body style ="colour : greenwhite; background-colour :blue>
+    <body style ="color : rgb(21, 31, 172); background-color :red; " >
         <h1> <b> uday kanchanapally </b></h1>
         <br>
         <hr>
-        <p> <i> Hi this my first program in the html </i></p>
+        <p> <h2>
+           <b><i> Hi this my first program in the html </i></b>
+        </h2></p>
         <p> second line making a big as <big>  small </big> </p>
         <p> third line making a small as <small> big </small> </p>
 
