quote and comments updated  file

--- a/comments .html
+++ b/comments .html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html> 
     <body>
+        <h1 style="border:30px solid tomato;">
+            comments
+        </h1>
+        <h1 style="border:2px solid Tomato;">Hello World</h1>
         <p>
             <!-- p tag is used for the paragraph -->
             <h>
