added css  file

--- a/comments .html
+++ b/comments .html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html> 
-    <body>
-        <h1 style="border:30px solid tomato;">
-            comments
+    <body style="border: 10px solid blue;font-style:italic;">
+        <h1 style="border:19px solid rgb(35, 8, 110); background-color: rgb(36, 145, 26);text-align: center;">
+                   comments
         </h1>
         <h1 style="border:2px solid Tomato;">Hello World</h1>
         <p>
