--- a/ link.html
+++ b/ link.html
@@ -60,15 +60,21 @@
 
 
 </body>
-
-<a href="https://www.instagram.com" title="instagram login page " target="_blank "<!-- target may have _blank or _self or _top or _parent--><q>click to login</q> </a>
-
-<a href="/Hackers-PC-Backgrounds.jpeg" title="instagram login page " target="_blank "<!-- target may have _blank or _self or _top or _parent--><q>click to login</q> </a>
+<br>
+<a href="https://www.instagram.com" title="instagram login page " target="_blank "<!-- target may have _blank or _self or _top or _parent--><q>click to login</q> </a><br>
+<br>
+<a href="/ title="instagram login page " target="_blank "<!-- target may have _blank or _self or _top or _parent--><q>click to login</q> </a><br>
 
 <br>
 <br>
 <button onclick="document.location='default.asp'" style="background-color:rgb(46, 61, 196);color:rgb(241, 122, 10)">HTML Tutorial</button>
 </body>
+
+<a href ="https://www.google.com/maps" alt = "map" >
+    <img  src ="/yolande.gif" style="background-color:aqua"></a>
+    
+    
+
 </html>
 
 
