complete html tag image file

--- a/img.html
+++ b/img.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html>
 
+
+
+<head>
+<title>
+  <h1 >img  complete  tutorial in this file </h1>  
+</title>
+<address>
+    <b>
+    Developed by udaykanchanapally
+    </b>
+</address>
+  <style>
+    body {
+        background-image: url("yolande.gif") ;
+        background-size :auto;
+       background-repeat: repeat;
+        background-attachment:fixed;
+        background-position: 14x;
+        background-origin: border-box;
+        box-shadow: insert;
+        border : solid red;
+    }
+        
+  </style>
+
+</head>
+
+
+
+
+<body>
+
+
+
+
+
 <h1 style="background-color: red;color:aquamarine;border:solid black ;text-align: center; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"> 
     <b>
         <strong>
             <q>
-                Hello image map 
+                Hello image tutotial...
             </q>
         </strong>
     </b>
@@ -27,4 +63,16 @@
     
 
 <!--imagemap.net website for coords-->
+
+<picture>
+    <source media="640px" srcset="https://imgs.search.brave.com/CBsKZomhT5kOfsjs9qkE1uXNtrdc3e08K0Z8VdUWEmo/rs:fit:844:225:1/g:ce/aHR0cHM6Ly90c2Uy/Lm1tLmJpbmcubmV0/L3RoP2lkPU9JUC5K/TVdCamtETWpyZDZD/aUhfTzRBZDhBSGFF/SyZwaWQ9QXBp"><br>
+<!-- it only display for 640px  screeen <picture-->
+    <img  style="width: max-content; text-decoration:double;" src="https://imgs.search.brave.com/CBsKZomhT5kOfsjs9qkE1uXNtrdc3e08K0Z8VdUWEmo/rs:fit:844:225:1/g:ce/aHR0cHM6Ly90c2Uy/Lm1tLmJpbmcubmV0/L3RoP2lkPU9JUC5K/TVdCamtETWpyZDZD/aUhfTzRBZDhBSGFF/SyZwaWQ9QXBp">
+</picture>
+
+
+
+
+
+</body>
 </html>
