--- a/css.html
+++ b/css.html
@@ -10,7 +10,7 @@
             font-style: oblique;
             border: 19px salmon red;
             padding:calc(6) ;
-
+            border: 19px rgb(13, 50, 151) blue;
         }
 
         p  {
