--- a/css.html
+++ b/css.html
@@ -119,6 +119,7 @@
                     adding the external file eg. file.css 
                     <h3>
                         It also contains sames has in the internal syntax
+                       <blockquote ><b><i> we use it by link tag </i></b></blockquote>
                     </h3>
                 </h2>
             </h1>
