--- a/iframe.html
+++ b/iframe.html
@@ -15,8 +15,9 @@
 <body>
 
 
-    <iframe src= "https://www.youtube.com/" name="enter" height = "auto " width = auto ></iframe>
-
+    <iframe src= "images.html" name="enter" ></iframe>
+    <br>
+    <a href="https://www.w3school.com" target="enter"> YOUTUBE </a>
 
 </body>
 
