--- a/img.html
+++ b/img.html
@@ -5,7 +5,7 @@
 
 <head>
 <title>
-  <h1 >img  complete  tutorial in this file </h1>  
+    Image complete  tutorial in this file  
 </title>
 <address>
     <b>
@@ -52,7 +52,7 @@
 
 
 <map name="hacker">
-    <area shape="rect" coords = "1258,1024,852,917" alt = "" href="https://www.google.com">
+    <area shape="rect" coords = "1258,1024,852,917"  href="https://www.google.com">
     <area shape="poly" coords ="1310,388,810,136,584,831,1317,763,703,136,379,285,209,836,771,1041,1037,583 alt = "hello" href = "https://www.youtube.com">
 
 </map>
